# Hackathon-2-Todo-List

./: README.md
Phase01_InMemoryPythonConsoleApp/: .gitignore  README.md  main.py  pyproject.toml
Phase01_InMemoryPythonConsoleApp/.claude/agents/: cli-designer.md  python-todo-architect.md  testing-expert.md  tui-designer.md
Phase01_InMemoryPythonConsoleApp/.claude/skills/advanced-feature-implementation/: SKILL.md
Phase01_InMemoryPythonConsoleApp/.claude/skills/advanced-feature-testing/: SKILL.md
Phase01_InMemoryPythonConsoleApp/.claude/skills/basic-crud-implementation/: SKILL.md
Phase01_InMemoryPythonConsoleApp/.claude/skills/basic-feature-testing/: SKILL.md
Phase01_InMemoryPythonConsoleApp/.claude/skills/cli-command-structure/: SKILL.md
Phase01_InMemoryPythonConsoleApp/.claude/skills/cli-error-handling/: SKILL.md
Phase01_InMemoryPythonConsoleApp/.claude/skills/cli-input-validation/: SKILL.md
Phase01_InMemoryPythonConsoleApp/.claude/skills/cli-interactive-menu/: SKILL.md
Phase01_InMemoryPythonConsoleApp/.claude/skills/cli-output-formatting/: SKILL.md
Phase01_InMemoryPythonConsoleApp/.claude/skills/readme-writer/: SKILL.md
Phase01_InMemoryPythonConsoleApp/.specify/memory/: constitution.md
Phase01_InMemoryPythonConsoleApp/specs/advanced-features/: plan.md  spec.md  tasks.md
Phase01_InMemoryPythonConsoleApp/specs/basic-crud/: plan.md  spec.md  tasks.md
Phase01_InMemoryPythonConsoleApp/specs/intermediate-features/: plan.md  spec.md  tasks.md
Phase01_InMemoryPythonConsoleApp/tests/unit/: test_datetime.py  test_recurrence.py  test_reminders.py
(+422 files in other folders)
